feat(图表): 辅助线支持选择最后一项 #14417